--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,7 +10,8 @@
     <h1><%= campground.title %></h1>
     <h2><%= campground.location %></h2>
     <footer>
-      <a href="/campgrounds">All Campgrounds</a>
+      <p><a href="/campgrounds/<%= campground._id %>/edit">Edit</a></p>
+      <p><a href="/campgrounds">All Campgrounds</a></p>
     </footer>
   </body>
 </html>
