--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,6 +11,11 @@
     <h2><%= campground.location %></h2>
     <footer>
       <p><a href="/campgrounds/<%= campground._id %>/edit">Edit</a></p>
+      <p>
+        <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+          <button>Delete</button>
+        </form>
+      </p>
       <p><a href="/campgrounds">All Campgrounds</a></p>
     </footer>
   </body>
