--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,10 +3,29 @@
 <div>
   <a href="/campgrounds/new">Add Campground</a>
 </div>
-<ul>
-  <% for (let campground of campgrounds) { %>
-  <li>
-    <a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a>
-  </li>
-  <% } %>
-</ul>
+
+<% for (let campground of campgrounds) { %>
+<div class="card mb-3">
+  <div class="row">
+    <div class="col-md-4">
+      <img
+        class="img-fluid rounded-start"
+        src="<%= campground.image %>"
+        alt="<%= campground.title %>"
+      />
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h2 class="card-title h5"><%= campground.title %></h2>
+        <p class="card-text"><%= campground.description %></p>
+        <p class="card-text">
+          <small class="text-muted"><%= campground.location %></small>
+        </p>
+        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
+          >View <%= campground.title %></a
+        >
+      </div>
+    </div>
+  </div>
+</div>
+<% } %>
