--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,7 @@
 
 <% for (let campground of campgrounds) { %>
 <div class="card mb-3">
-  <div class="row">
+  <div class="row g-0">
     <div class="col-md-4">
       <img
         class="img-fluid rounded-start"
