--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -71,6 +71,12 @@
       <div class="card-body">
         <h3 class="h5 card-title">Rating: <%= review.rating %></h3>
         <p class="card-text">Review: <%= review.body %></p>
+        <form
+          action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+          method="POST"
+        >
+          <button class="btn btn-sm btn-danger">Delete</button>
+        </form>
       </div>
     </div>
     <% } %>
