--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -39,6 +39,7 @@
     </div>
   </div>
   <div class="col-6">
+    <% if (currentUser) { %>
     <h2>Leave a Review</h2>
     <form
       action="/campgrounds/<%= campground._id %>/reviews"
@@ -71,7 +72,7 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% for (let review of campground.reviews) { %>
+    <% } %> <% for (let review of campground.reviews) { %>
     <div class="card mb-3">
       <div class="card-body">
         <h3 class="h5 card-title">Rating: <%= review.rating %></h3>
