--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -76,13 +76,18 @@
     <div class="card mb-3">
       <div class="card-body">
         <h3 class="h5 card-title">Rating: <%= review.rating %></h3>
+        <h4 class="h6 card-subtitle mb-2 text-muted">
+          By <%= review.author.username %>
+        </h4>
         <p class="card-text">Review: <%= review.body %></p>
+        <% if (currentUser && review.author.equals(currentUser._id)) { %>
         <form
           action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
           method="POST"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
