--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -75,10 +75,10 @@
     <% } %> <% for (let review of campground.reviews) { %>
     <div class="card mb-3">
       <div class="card-body">
-        <h3 class="h5 card-title">Rating: <%= review.rating %></h3>
-        <h4 class="h6 card-subtitle mb-2 text-muted">
-          By <%= review.author.username %>
-        </h4>
+        <h3 class="h5 card-title"><%= review.author.username %></h3>
+        <p class="starability-result" data-rating="<%= review.rating %>">
+          Rated: <%= review.rating %> stars
+        </p>
         <p class="card-text">Review: <%= review.body %></p>
         <% if (currentUser && review.author.equals(currentUser._id)) { %>
         <form
