--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,6 +5,7 @@
     <form
       action="/campgrounds/<%= campground._id %>?_method=PUT"
       method="POST"
+      enctype="multipart/form-data"
       novalidate
       class="validated-form"
     >
@@ -33,12 +34,12 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
+        <label class="form-label" for="image">Image</label>
         <input
           class="form-control"
-          type="text"
+          type="file"
           id="image"
-          name="campground[image]"
+          name="image"
           required
           value="<%= campground.image %>"
         />
