make file input multiple

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -40,6 +40,7 @@
           type="file"
           id="image"
           name="image"
+          multiple
           value="<%= campground.image %>"
         />
         <div class="valid-feedback">Looks good!</div>
