--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -38,6 +38,7 @@
           type="file"
           id="image"
           name="image"
+          multiple
           required
         />
         <div class="valid-feedback">Looks good!</div>
