--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,7 @@
     <div class="col-md-4">
       <img
         class="img-fluid rounded-start"
-        src="<%= campground.image %>"
+        src="<%= campground.images[0] %>"
         alt="<%= campground.title %>"
       />
     </div>
