--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,7 @@
   <div class="col-6">
     <div class="card mb-3">
       <img
-        src="<%= campground.image %>"
+        src="<%= campground.images[0] %>"
         class="card-img-top"
         alt="<%= campground.title %>"
       />
