--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,11 +3,45 @@
 <div class="row">
   <div class="col-6">
     <div class="card mb-3">
-      <img
-        src="<%= campground.images[0] %>"
-        class="card-img-top"
-        alt="<%= campground.title %>"
-      />
+      <div class="card-img-top">
+        <div
+          id="campgroundCarousel"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <% campground.images.forEach((img, i) => { %>
+            <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+              <img
+                src="<%= img %>"
+                class="d-block w-100"
+                alt="<%= campground.title %>"
+              />
+            </div>
+            <% }) %>
+          </div>
+          <% if (campground.images.length > 1) { %>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#campgroundCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#campgroundCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <% } %>
+        </div>
+      </div>
       <div class="card-body">
         <h1 class="card-title h5"><%= campground.title %></h1>
         <p class="card-text"><%= campground.description %></p>
