--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/starability-basic.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
