--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,6 +12,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/starability-basic.css" />
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body class="d-flex flex-column vh-100">
