--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,6 @@
 <div class="row">
   <div class="col-6">
     <div class="card mb-3">
-      <div id="map" style="width: 400px; height: 300px"></div>
       <div class="card-img-top">
         <% if (campground.images.length) { %>
         <div
@@ -82,6 +81,7 @@
     </div>
   </div>
   <div class="col-6">
+    <div id="map" class="mb-3" style="width: 400px; height: 300px"></div>
     <% if (currentUser) { %>
     <h2>Leave a Review</h2>
     <form
