--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
+<div id="map" class="mb-3" style="width: 100%; height: 500px"></div>
 <h1>All Campgrounds</h1>
-
 <% for (let campground of campgrounds) { %>
 <div class="card mb-3">
   <div class="row g-0">
@@ -34,3 +34,8 @@
   </div>
 </div>
 <% } %>
+
+<script>
+  const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
+</script>
+<script src="/js/clusterMap.js"></script>
