--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -37,5 +37,6 @@
 
 <script>
   const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
+  const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
 </script>
 <script src="/js/clusterMap.js"></script>
