--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,3 +3,13 @@ img {
   aspect-ratio: 16/10;
   object-fit: cover;
 }
+
+#cluster-map {
+  width: 100%;
+  height: 500px;
+}
+
+#map {
+  width: 100%;
+  height: 300px;
+}
