--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-<div id="map" class="mb-3" style="width: 100%; height: 500px"></div>
+<div id="cluster-map" class="mb-3"></div>
 <h1>All Campgrounds</h1>
 <% for (let campground of campgrounds) { %>
 <div class="card mb-3">
