--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,9 @@
   <div class="col-10 offset-1">
     <div class="alert alert-danger" role="alert">
       <h1 class="alert-heading h4"><%= err.message %></h1>
+      <% if (process.env.NODE_ENV !== 'production') { %>
       <p><%= err.stack %></p>
+      <% } %>
     </div>
   </div>
 </div>
