--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,16 @@
+.h-100 {
+  height: 100%;
+}
+
 img {
   width: 100%;
   aspect-ratio: 16/10;
   object-fit: cover;
+}
+
+.h-100 img {
+  height: 100%;
+  width: auto;
 }
 
 #cluster-map {
